bloque2/p3/y.output
Terminals unused in grammar

   TOK_FLECHA
   TOK_ERROR
   NEG_UNARIA


State 101 conflicts: 2 shift/reduce
State 102 conflicts: 2 shift/reduce
State 136 conflicts: 6 shift/reduce
State 137 conflicts: 6 shift/reduce
State 138 conflicts: 2 shift/reduce
State 139 conflicts: 2 shift/reduce
State 140 conflicts: 2 shift/reduce
State 141 conflicts: 2 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: TOK_MAIN '{' declaraciones funciones sentencias '}'
    2         | TOK_MAIN '{' funciones sentencias '}'

    3 declaraciones: declaracion
    4              | declaracion declaraciones

    5 declaracion: modificadores_acceso clase identificadores ';'
    6            | modificadores_acceso declaracion_clase ';'

    7 modificadores_acceso: TOK_HIDDEN TOK_UNIQUE
    8                     | TOK_SECRET TOK_UNIQUE
    9                     | TOK_EXPOSED TOK_UNIQUE
   10                     | TOK_HIDDEN
   11                     | TOK_SECRET
   12                     | TOK_EXPOSED
   13                     | TOK_UNIQUE
   14                     | %empty

   15 clase: clase_escalar
   16      | clase_vector
   17      | clase_objeto

   18 declaracion_clase: modificadores_clase TOK_CLASS TOK_IDENTIFICADOR TOK_INHERITS identificadores '{' declaraciones funciones '}'
   19                  | modificadores_clase TOK_CLASS TOK_IDENTIFICADOR '{' declaraciones funciones '}'

   20 modificadores_clase: %empty

   21 clase_escalar: tipo

   22 tipo: TOK_INT
   23     | TOK_BOOLEAN

   24 clase_objeto: '{' TOK_IDENTIFICADOR '}'

   25 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA ']'

   26 identificadores: TOK_IDENTIFICADOR ',' identificadores
   27                | TOK_IDENTIFICADOR

   28 funciones: funcion funciones
   29          | %empty

   30 funcion: TOK_FUNCTION modificadores_acceso tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

   31 tipo_retorno: TOK_NONE
   32             | tipo
   33             | clase_objeto

   34 parametros_funcion: parametro_funcion resto_parametros_funcion
   35                   | %empty

   36 resto_parametros_funcion: ';' parametro_funcion resto_parametros_funcion
   37                         | %empty

   38 parametro_funcion: tipo TOK_IDENTIFICADOR
   39                  | clase_objeto TOK_IDENTIFICADOR

   40 declaraciones_funcion: declaraciones
   41                      | %empty

   42 sentencias: sentencia sentencias
   43           | sentencia

   44 sentencia: sentencia_simple ';'
   45          | bloque

   46 sentencia_simple: asignacion
   47                 | escritura
   48                 | lectura
   49                 | retorno_funcion
   50                 | identificador_clase '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   51                 | TOK_IDENTIFICADOR '(' lista_expresiones ')'
   52                 | destruir_objeto

   53 destruir_objeto: TOK_DISCARD TOK_IDENTIFICADOR

   54 bloque: condicional
   55       | bucle

   56 asignacion: TOK_IDENTIFICADOR '=' exp
   57           | elemento_vector '=' exp
   58           | elemento_vector '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   59           | TOK_IDENTIFICADOR '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   60           | identificador_clase '.' TOK_IDENTIFICADOR '=' exp

   61 elemento_vector: TOK_IDENTIFICADOR '[' exp ']'

   62 condicional: TOK_IF '(' exp ')' '{' sentencias '}'
   63            | TOK_IF '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

   64 bucle: TOK_WHILE '(' exp ')' '{' sentencias '}'

   65 lectura: TOK_SCANF TOK_IDENTIFICADOR
   66        | TOK_SCANF elemento_vector

   67 escritura: TOK_PRINTF exp

   68 retorno_funcion: TOK_RETURN exp
   69                | TOK_RETURN TOK_NONE

   70 exp: exp '+' exp
   71    | exp '-' exp
   72    | exp '/' exp
   73    | exp '*' exp
   74    | '-' exp
   75    | exp TOK_AND exp
   76    | exp TOK_OR exp
   77    | '!' exp
   78    | TOK_IDENTIFICADOR
   79    | constante
   80    | '(' exp ')'
   81    | '(' comparacion ')'
   82    | elemento_vector
   83    | TOK_IDENTIFICADOR '(' lista_expresiones ')'
   84    | identificador_clase '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   85    | identificador_clase '.' TOK_IDENTIFICADOR

   86 identificador_clase: TOK_IDENTIFICADOR
   87                    | TOK_ITSELF

   88 lista_expresiones: exp resto_lista_expresiones
   89                  | %empty

   90 resto_lista_expresiones: ',' exp resto_lista_expresiones
   91                        | %empty

   92 comparacion: exp TOK_IGUAL exp
   93            | exp TOK_DISTINTO exp
   94            | exp TOK_MENORIGUAL exp
   95            | exp TOK_MAYORIGUAL exp
   96            | exp '<' exp
   97            | exp '>' exp

   98 constante: constante_logica
   99          | constante_entera

  100 constante_logica: TOK_TRUE
  101                 | TOK_FALSE

  102 constante_entera: TOK_CONSTANTE_ENTERA


Terminals, with rules where they appear

$end (0) 0
'!' (33) 77
'(' (40) 30 50 51 58 59 62 63 64 80 81 83 84
')' (41) 30 50 51 58 59 62 63 64 80 81 83 84
'*' (42) 73
'+' (43) 70
',' (44) 26 90
'-' (45) 71 74
'.' (46) 50 60 84 85
'/' (47) 72
';' (59) 5 6 36 44
'<' (60) 96
'=' (61) 56 57 58 59 60
'>' (62) 97
'[' (91) 25 61
']' (93) 25 61
'{' (123) 1 2 18 19 24 30 62 63 64
'}' (125) 1 2 18 19 24 30 62 63 64
error (256)
TOK_NONE (258) 31 69
TOK_CLASS (259) 18 19
TOK_INHERITS (260) 18
TOK_INSTANCE_OF (261) 58 59
TOK_DISCARD (262) 53
TOK_ITSELF (263) 87
TOK_FLECHA (264)
TOK_HIDDEN (265) 7 10
TOK_SECRET (266) 8 11
TOK_EXPOSED (267) 9 12
TOK_UNIQUE (268) 7 8 9 13
TOK_FUNCTION (269) 30
TOK_RETURN (270) 68 69
TOK_MAIN (271) 1 2
TOK_INT (272) 22
TOK_BOOLEAN (273) 23
TOK_ARRAY (274) 25
TOK_IF (275) 62 63
TOK_ELSE (276) 63
TOK_WHILE (277) 64
TOK_SCANF (278) 65 66
TOK_PRINTF (279) 67
TOK_IDENTIFICADOR (280) 18 19 24 26 27 30 38 39 50 51 53 56 58 59 60
    61 65 78 83 84 85 86
TOK_IGUAL (281) 92
TOK_DISTINTO (282) 93
TOK_MENORIGUAL (283) 94
TOK_MAYORIGUAL (284) 95
TOK_OR (285) 76
TOK_AND (286) 75
TOK_CONSTANTE_ENTERA (287) 25 102
TOK_FALSE (288) 101
TOK_TRUE (289) 100
TOK_ERROR (290)
NEG_UNARIA (291)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
programa (55)
    on left: 1 2, on right: 0
declaraciones (56)
    on left: 3 4, on right: 1 4 18 19 40
declaracion (57)
    on left: 5 6, on right: 3 4
modificadores_acceso (58)
    on left: 7 8 9 10 11 12 13 14, on right: 5 6 30
clase (59)
    on left: 15 16 17, on right: 5
declaracion_clase (60)
    on left: 18 19, on right: 6
modificadores_clase (61)
    on left: 20, on right: 18 19
clase_escalar (62)
    on left: 21, on right: 15
tipo (63)
    on left: 22 23, on right: 21 25 32 38
clase_objeto (64)
    on left: 24, on right: 17 33 39
clase_vector (65)
    on left: 25, on right: 16
identificadores (66)
    on left: 26 27, on right: 5 18 26
funciones (67)
    on left: 28 29, on right: 1 2 18 19 28
funcion (68)
    on left: 30, on right: 28
tipo_retorno (69)
    on left: 31 32 33, on right: 30
parametros_funcion (70)
    on left: 34 35, on right: 30
resto_parametros_funcion (71)
    on left: 36 37, on right: 34 36
parametro_funcion (72)
    on left: 38 39, on right: 34 36
declaraciones_funcion (73)
    on left: 40 41, on right: 30
sentencias (74)
    on left: 42 43, on right: 1 2 30 42 62 63 64
sentencia (75)
    on left: 44 45, on right: 42 43
sentencia_simple (76)
    on left: 46 47 48 49 50 51 52, on right: 44
destruir_objeto (77)
    on left: 53, on right: 52
bloque (78)
    on left: 54 55, on right: 45
asignacion (79)
    on left: 56 57 58 59 60, on right: 46
elemento_vector (80)
    on left: 61, on right: 57 58 66 82
condicional (81)
    on left: 62 63, on right: 54
bucle (82)
    on left: 64, on right: 55
lectura (83)
    on left: 65 66, on right: 48
escritura (84)
    on left: 67, on right: 47
retorno_funcion (85)
    on left: 68 69, on right: 49
exp (86)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85, on right:
    56 57 60 61 62 63 64 67 68 70 71 72 73 74 75 76 77 80 88 90 92
    93 94 95 96 97
identificador_clase (87)
    on left: 86 87, on right: 50 60 84 85
lista_expresiones (88)
    on left: 88 89, on right: 50 51 58 59 83 84
resto_lista_expresiones (89)
    on left: 90 91, on right: 88 90
comparacion (90)
    on left: 92 93 94 95 96 97, on right: 81
constante (91)
    on left: 98 99, on right: 79
constante_logica (92)
    on left: 100 101, on right: 98
constante_entera (93)
    on left: 102, on right: 99


State 0

    0 $accept: . programa $end

    TOK_MAIN  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: TOK_MAIN . '{' declaraciones funciones sentencias '}'
    2         | TOK_MAIN . '{' funciones sentencias '}'

    '{'  shift, and go to state 3


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


State 3

    1 programa: TOK_MAIN '{' . declaraciones funciones sentencias '}'
    2         | TOK_MAIN '{' . funciones sentencias '}'

    TOK_HIDDEN    shift, and go to state 5
    TOK_SECRET    shift, and go to state 6
    TOK_EXPOSED   shift, and go to state 7
    TOK_UNIQUE    shift, and go to state 8
    TOK_FUNCTION  shift, and go to state 9

    TOK_CLASS    reduce using rule 14 (modificadores_acceso)
    TOK_INT      reduce using rule 14 (modificadores_acceso)
    TOK_BOOLEAN  reduce using rule 14 (modificadores_acceso)
    TOK_ARRAY    reduce using rule 14 (modificadores_acceso)
    '{'          reduce using rule 14 (modificadores_acceso)
    $default     reduce using rule 29 (funciones)

    declaraciones         go to state 10
    declaracion           go to state 11
    modificadores_acceso  go to state 12
    funciones             go to state 13
    funcion               go to state 14


State 4

    0 $accept: programa $end .

    $default  accept


State 5

    7 modificadores_acceso: TOK_HIDDEN . TOK_UNIQUE
   10                     | TOK_HIDDEN .

    TOK_UNIQUE  shift, and go to state 15

    $default  reduce using rule 10 (modificadores_acceso)


State 6

    8 modificadores_acceso: TOK_SECRET . TOK_UNIQUE
   11                     | TOK_SECRET .

    TOK_UNIQUE  shift, and go to state 16

    $default  reduce using rule 11 (modificadores_acceso)


State 7

    9 modificadores_acceso: TOK_EXPOSED . TOK_UNIQUE
   12                     | TOK_EXPOSED .

    TOK_UNIQUE  shift, and go to state 17

    $default  reduce using rule 12 (modificadores_acceso)


State 8

   13 modificadores_acceso: TOK_UNIQUE .

    $default  reduce using rule 13 (modificadores_acceso)


State 9

   30 funcion: TOK_FUNCTION . modificadores_acceso tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_HIDDEN   shift, and go to state 5
    TOK_SECRET   shift, and go to state 6
    TOK_EXPOSED  shift, and go to state 7
    TOK_UNIQUE   shift, and go to state 8

    $default  reduce using rule 14 (modificadores_acceso)

    modificadores_acceso  go to state 18


State 10

    1 programa: TOK_MAIN '{' declaraciones . funciones sentencias '}'

    TOK_FUNCTION  shift, and go to state 9

    $default  reduce using rule 29 (funciones)

    funciones  go to state 19
    funcion    go to state 14


State 11

    3 declaraciones: declaracion .
    4              | declaracion . declaraciones

    TOK_HIDDEN   shift, and go to state 5
    TOK_SECRET   shift, and go to state 6
    TOK_EXPOSED  shift, and go to state 7
    TOK_UNIQUE   shift, and go to state 8

    TOK_CLASS    reduce using rule 14 (modificadores_acceso)
    TOK_INT      reduce using rule 14 (modificadores_acceso)
    TOK_BOOLEAN  reduce using rule 14 (modificadores_acceso)
    TOK_ARRAY    reduce using rule 14 (modificadores_acceso)
    '{'          reduce using rule 14 (modificadores_acceso)
    $default     reduce using rule 3 (declaraciones)

    declaraciones         go to state 20
    declaracion           go to state 11
    modificadores_acceso  go to state 12


State 12

    5 declaracion: modificadores_acceso . clase identificadores ';'
    6            | modificadores_acceso . declaracion_clase ';'

    TOK_INT      shift, and go to state 21
    TOK_BOOLEAN  shift, and go to state 22
    TOK_ARRAY    shift, and go to state 23
    '{'          shift, and go to state 24

    $default  reduce using rule 20 (modificadores_clase)

    clase                go to state 25
    declaracion_clase    go to state 26
    modificadores_clase  go to state 27
    clase_escalar        go to state 28
    tipo                 go to state 29
    clase_objeto         go to state 30
    clase_vector         go to state 31


State 13

    2 programa: TOK_MAIN '{' funciones . sentencias '}'

    TOK_DISCARD        shift, and go to state 32
    TOK_ITSELF         shift, and go to state 33
    TOK_RETURN         shift, and go to state 34
    TOK_IF             shift, and go to state 35
    TOK_WHILE          shift, and go to state 36
    TOK_SCANF          shift, and go to state 37
    TOK_PRINTF         shift, and go to state 38
    TOK_IDENTIFICADOR  shift, and go to state 39

    sentencias           go to state 40
    sentencia            go to state 41
    sentencia_simple     go to state 42
    destruir_objeto      go to state 43
    bloque               go to state 44
    asignacion           go to state 45
    elemento_vector      go to state 46
    condicional          go to state 47
    bucle                go to state 48
    lectura              go to state 49
    escritura            go to state 50
    retorno_funcion      go to state 51
    identificador_clase  go to state 52


State 14

   28 funciones: funcion . funciones

    TOK_FUNCTION  shift, and go to state 9

    $default  reduce using rule 29 (funciones)

    funciones  go to state 53
    funcion    go to state 14


State 15

    7 modificadores_acceso: TOK_HIDDEN TOK_UNIQUE .

    $default  reduce using rule 7 (modificadores_acceso)


State 16

    8 modificadores_acceso: TOK_SECRET TOK_UNIQUE .

    $default  reduce using rule 8 (modificadores_acceso)


State 17

    9 modificadores_acceso: TOK_EXPOSED TOK_UNIQUE .

    $default  reduce using rule 9 (modificadores_acceso)


State 18

   30 funcion: TOK_FUNCTION modificadores_acceso . tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_NONE     shift, and go to state 54
    TOK_INT      shift, and go to state 21
    TOK_BOOLEAN  shift, and go to state 22
    '{'          shift, and go to state 24

    tipo          go to state 55
    clase_objeto  go to state 56
    tipo_retorno  go to state 57


State 19

    1 programa: TOK_MAIN '{' declaraciones funciones . sentencias '}'

    TOK_DISCARD        shift, and go to state 32
    TOK_ITSELF         shift, and go to state 33
    TOK_RETURN         shift, and go to state 34
    TOK_IF             shift, and go to state 35
    TOK_WHILE          shift, and go to state 36
    TOK_SCANF          shift, and go to state 37
    TOK_PRINTF         shift, and go to state 38
    TOK_IDENTIFICADOR  shift, and go to state 39

    sentencias           go to state 58
    sentencia            go to state 41
    sentencia_simple     go to state 42
    destruir_objeto      go to state 43
    bloque               go to state 44
    asignacion           go to state 45
    elemento_vector      go to state 46
    condicional          go to state 47
    bucle                go to state 48
    lectura              go to state 49
    escritura            go to state 50
    retorno_funcion      go to state 51
    identificador_clase  go to state 52


State 20

    4 declaraciones: declaracion declaraciones .

    $default  reduce using rule 4 (declaraciones)


State 21

   22 tipo: TOK_INT .

    $default  reduce using rule 22 (tipo)


State 22

   23 tipo: TOK_BOOLEAN .

    $default  reduce using rule 23 (tipo)


State 23

   25 clase_vector: TOK_ARRAY . tipo '[' TOK_CONSTANTE_ENTERA ']'

    TOK_INT      shift, and go to state 21
    TOK_BOOLEAN  shift, and go to state 22

    tipo  go to state 59


State 24

   24 clase_objeto: '{' . TOK_IDENTIFICADOR '}'

    TOK_IDENTIFICADOR  shift, and go to state 60


State 25

    5 declaracion: modificadores_acceso clase . identificadores ';'

    TOK_IDENTIFICADOR  shift, and go to state 61

    identificadores  go to state 62


State 26

    6 declaracion: modificadores_acceso declaracion_clase . ';'

    ';'  shift, and go to state 63


State 27

   18 declaracion_clase: modificadores_clase . TOK_CLASS TOK_IDENTIFICADOR TOK_INHERITS identificadores '{' declaraciones funciones '}'
   19                  | modificadores_clase . TOK_CLASS TOK_IDENTIFICADOR '{' declaraciones funciones '}'

    TOK_CLASS  shift, and go to state 64


State 28

   15 clase: clase_escalar .

    $default  reduce using rule 15 (clase)


State 29

   21 clase_escalar: tipo .

    $default  reduce using rule 21 (clase_escalar)


State 30

   17 clase: clase_objeto .
